2006-03-01	Benedikt Meurer <benny@xfce.org>

	* NEWS: Updated news items.

2006-03-01	Benedikt Meurer <benny@xfce.org>

	* TerminalHelp.in: Use exo-open to display the documentation.
	* terminal/terminal-preferences.c(terminal_preferences_class_init):
	  Enable "misc-cycle-tabs" by default.
	* doc/C/: Update the user manual.
	* terminal/Makefile.am, terminal/terminal-dbus.c,
	  terminal/terminal-widget.c: Include <exo/exo.h> instead of
	  <libxfce4util/libxfce4util.h>.

2006-02-25	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-window.c(terminal_window_action_set_title): Apply
	  Daichi's patch to distinguish between the "Set Title" string in the
	  menu action and the "Set Title" string in the dialog title.

2006-02-25	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-preferences.c: Add hidden option MiscInheritGeometry
	  which controls whether new windows will inherit the geometry of the
	  parent window.
	* terminal/terminal-window.{c,h}: Make terminal_window_get_active()
	  public.
	* terminal/terminal-app.c(terminal_app_new_window): If the user has
	  enabled MiscInheritGeometry, try to apply the geometry of the
	  previous window to the new window.
	* doc/C/Terminal.xml.in: Update the user manual.

2006-02-24	Benedikt Meurer <benny@xfce.org>

	* autogen.sh: Be sure to run svn info with LC_ALL=C.

2006-02-19	Benedikt Meurer <benny@xfce.org>

	* NEWS, THANKS: Add translator credits for Stavros Giannouris (el
	  translator).
	* Terminal.ui, terminal/terminal-preferences.c,
	  terminal/terminal-shortcut-editor.c, terminal/terminal-window.c: Add
	  new action "Detach Tab" to the UI manager and the shortcuts manager.
	  Bug #1477.
	* po/Terminal.pot, po/*.po: Merge new strings.

2006-02-18	Daichi Kawahata <daichi@xfce.org>

	* configure.in.in: Add "el" to XDT_I18N().

2006-02-14	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-preferences.c, terminal/terminal-window.c: Add new
	  hidden setting "MiscAlwaysShowTabs", based on a patch provided by