@@ -64,7 +64,7 @@ AC_CHECK_HEADERS([ctype.h errno.h limits.h pwd.h time.h])
 dnl ******************************
 dnl *** Check for i18n support ***
 dnl ******************************
-XDT_I18N([ca de el en_GB es eu fi fr he hu it ja ko nl pt_BR ru sk vi zh_CN zh_TW])
+XDT_I18N([@LINGUAS@])
 
 dnl ***********************************
 dnl *** Check for required packages ***
