@@ -1,0 +1,2 @@
+# set of available languages (in alphabetic order)
+ca de el en_GB es eu fi fr he hu it ja ko nl pt_BR ru sk vi zh_CN zh_TW
