@@ -1,3 +1,9 @@
+2006-03-06	Benedikt Meurer <benny@xfce.org>
+
+	* autogen.sh, configure.in.in, po/LINGUAS: Read the set of available
+	  languages from po/LINGUAS and substitute them when autogen.sh is
+	  run. This way we can continue to use glib-gettext.
+
 2006-03-01	Benedikt Meurer <benny@xfce.org>
 
 	* NEWS: Updated news items.
